--- a/CNN test.ipynb
+++ b/CNN test.ipynb
@@ -27,8 +27,8 @@
     "from keras.layers.convolutional import MaxPooling2D\n",
     "from keras.utils import np_utils\n",
     "from keras import backend as K\n",
-    "K.set_image_dim_ordering('th')\n",
-    "from keras.models import model_from_json\n"
+    "K.set_image_data_format('channels_first')\n",
+    "from keras.models import model_from_json"
    ]
   },
   {
@@ -37,12 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_file = open('model_final.json', 'r')\n",
+    "from keras.models import model_from_json\n",
+    "\n",
+    "json_file = open('./model_final.json', 'r')\n",
     "loaded_model_json = json_file.read()\n",
     "json_file.close()\n",
     "loaded_model = model_from_json(loaded_model_json)\n",
     "# load weights into new model\n",
-    "loaded_model.load_weights(\"model_final.h5\")"
+    "loaded_model.load_weights(\"./model_final.h5\")"
    ]
   },
   {
@@ -53,11 +55,9 @@
    "source": [
     "import cv2\n",
     "import numpy as np\n",
-    "img = cv2.imread('C:/Users/Vipul Gupta/Pictures/test.jpeg',cv2.IMREAD_GRAYSCALE)\n",
+    "img = cv2.imread('./test.jpeg',cv2.IMREAD_GRAYSCALE)\n",
     "#kernel = np.ones((3,3),np.uint8)\n",
-    "cv2.imshow(\"wo\",img)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
+    "img\n",
     "#erosion = cv2.erode(img,kernel,iterations = 3)\n",
     "#dilation = cv2.dilate(img,kernel,iterations = 1)\n",
     "#img=dilation\n",
@@ -65,7 +65,7 @@
     "    #images.append(img)\n",
     "    img=~img\n",
     "    ret,thresh=cv2.threshold(img,127,255,cv2.THRESH_BINARY)\n",
-    "    ret,ctrs,ret=cv2.findContours(thresh,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    ctrs,ret=cv2.findContours(thresh,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
     "    cnt=sorted(ctrs, key=lambda ctr: cv2.boundingRect(ctr)[0])\n",
     "    w=int(28)\n",
     "    h=int(28)\n",
@@ -107,13 +107,8 @@
     "        w=r[2]\n",
     "        h=r[3]\n",
     "        im_crop =thresh[y:y+h+10,x:x+w+10]\n",
-    "        \n",
-    "\n",
     "        im_resize = cv2.resize(im_crop,(28,28))\n",
-    "        cv2.imshow(\"work\",im_resize)\n",
-    "        cv2.waitKey(0)\n",
-    "        cv2.destroyAllWindows()\n",
-    "\n",
+    "        im_resize\n",
     "        im_resize=np.reshape(im_resize,(1,28,28))\n",
     "        train_data.append(im_resize)"
    ]
@@ -132,11 +127,18 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "a = tf.nn.max_pool(np.random.rand(1, 1,10,10), [1,1,2,2], [1,1,1,1], 'VALID', data_format='NCHW')\n",
+    "sess=tf.InteractiveSession()\n",
+    "sess.run(a)\n",
+    "\n",
     "s=''\n",
     "for i in range(len(train_data)):\n",
     "    train_data[i]=np.array(train_data[i])\n",
     "    train_data[i]=train_data[i].reshape(1,1,28,28)\n",
-    "    result=loaded_model.predict_classes(train_data[i])\n",
+    "    probability_model = tf.keras.Sequential([loaded_model,tf.keras.layers.Softmax()])\n",
+    "    result = probability_model.predict(train_data[i])\n",
     "    if(result[0]==10):\n",
     "        s=s+'-'\n",
     "    if(result[0]==11):\n",
@@ -163,7 +165,7 @@
     "        s=s+'8'\n",
     "    if(result[0]==9):\n",
     "        s=s+'9'\n",
-    "    \n",
+    "\n",
     "print(s)    "
    ]
   },
@@ -197,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
