--- a/Data_extraction.ipynb
+++ b/Data_extraction.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cv2\n",
     "from PIL import Image\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
@@ -358,18 +357,11 @@
     "df=pd.DataFrame(data,index=None)\n",
     "df.to_csv('train_final.csv',index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -383,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
