--- a/train.ipynb
+++ b/train.ipynb
@@ -244,7 +244,7 @@
     "from keras.layers.convolutional import MaxPooling2D\n",
     "from keras.utils import np_utils\n",
     "from keras import backend as K\n",
-    "K.set_image_dim_ordering('th')"
+    "K.set_image_data_format('channels_first')"
    ]
   },
   {
@@ -523,7 +523,7 @@
     "model.add(Dense(50, activation='relu'))\n",
     "model.add(Dense(13, activation='softmax'))\n",
     "# Compile model\n",
-    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n"
+    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
@@ -605,7 +605,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -619,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
